# google-breakpad

./: .gitignore  CMakeLists.txt  README.md
BreakpabIntergation/: AndroidManifest.xml
BreakpabIntergation/src/com/pixonic/breakpabintergation/: CrashHandler.java  CrashReportDialog.java
BreakpadIntergation/: AndroidManifest.xml  build.xml  local.properties.sample
BreakpadIntergation/res/layout/: activity_crash_report_dialog.xml
BreakpadIntergation/res/values/: strings.xml
BreakpadIntergation/src/com/pixonic/breakpadintergation/: CrashHandler.java  CrashReportDialog.java  MultipartHttpEntity.java
google-breakpad/: CMakeLists.txt
google-breakpad/android/: setup.cc  setup.h
google-breakpad/android/google_breakpad/: Android.mk  integration.cc  integration.h
google-breakpad/src/: CMakeLists.txt
